samples/_failures_safe/1761459269_8ad1e2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7ff5ba4a.c: In function ‘main’:
./samples/SAFE/__tmp_7ff5ba4a.c:155:26: error: expected ‘)’ at end of input
  155 |         if (process_input
      |            ~             ^
      |                          )
./samples/SAFE/__tmp_7ff5ba4a.c:155:9: error: expected declaration or statement at end of input
  155 |         if (process_input
      |         ^~
./samples/SAFE/__tmp_7ff5ba4a.c:155:9: error: expected declaration or statement at end of input
